<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Emerald Launcher</string>
	<string name="appearancePrefs">Appearance preferences</string>
	<string name="portraitPrefs">Portrait mode preferences</string>
	<string name="landscapePrefs">Landscape mode preferences</string>
	
	<string name="home_button">Home button behaviour</string>
	<string name="categoryManager">Category manager</string>
	<string name="category_all">All apps</string>
	<string name="category_unclassified">Unclassified</string>
	<string name="category_history">History</string>
	<string name="category_hidden">Hidden</string>
	<string name="delete_category_question">Do you want to delete the category?</string>
	<string name="clear_category_question">Do you want to clear the category?</string>
	<string name="appShortcut">App shortcut</string>
	<string name="iconSize">Icon size</string>
	<string name="textSize">Text size</string>
	<string name="fontStyle">Font style</string>
	<string name="columnWidth">Column width</string>
	<string name="verticalSpacing">Vertical spacing</string>
	<string name="tileView">Grid</string>
	<string name="hide_main_bar">Hide main bar</string>
	<string name="bottom_main_bar">Main bar at the bottom</string>
	<string name="show_keyboard">Show keyboard on start</string>
	<string name="stack_from_bottom">Stick category content to the bottom</string>
	<string name="scrollbar">Fast scroll</string>
	<string name="orientation">Screen orientation</string>
	<string name="theme">Theme</string>
	<string name="ui_colors">UI colors</string>
	<string name="appsBackground">Apps window</string>
	<string name="statusBarBackground">Status bar</string>
	<string name="barBackground">Top bar</string>
	<string name="navBarBackground">Navigation bar</string>
	<string name="iconPack">Icon pack</string>
	<string name="transformIcons">Transform icons</string>
	<string name="transformIconsSummary">Edit icons according to icon pack settings</string>
	<string name="defaultIconPack">Default</string>
	<string name="fullscreen">Fullscreen mode</string>
	<string name="historySize">History size</string>
	<string name="password">Password</string>
	<string name="passwordSummary">Lock settings and hidden apps</string>
	<string name="passwordHint">Leave it empty to disable lock</string>
	<string name="searchProvider">Search provider</string>
	<string name="keepInMemory">Keep in memory</string>
	<string name="backupPrefs">Backup preferences</string>
	<string name="successfulBackup">Backup finished. Backup file can be found at </string>
	<string name="successfulRestore">Successfully restored.</string>
	<string name="restorePrefs">Restore preferences</string>
	<string name="restart">Restart launcher</string>
	<string name="restart_needed">Launcher will be restarted</string>
	
	<string name="launcherSettings">Launcher settings</string>
	
	<string name="createCategory">Create category</string>
	<string name="note_rename_error">Name is already in use</string>
	<string name="rename">Rename</string>
	<string name="editAppList">Edit application list</string>
	<string name="findInMarket">Find in app market</string>
	<string name="editAppCategories">Edit application categories</string>
	<string name="delete">Delete</string>
	<string name="setHome">Set as home</string>
	<string name="hide">Hide</string>
	<string name="unhide">Unhide</string>
	
	<string name="save_here">Save in this folder</string>
	<string name="dock_is_full">Dock is full</string>
	<string name="dock_preferences">Dock preferences</string>
	<string name="dock_height">Dock height</string>
	<string name="dock_icon_size">Dock icon size</string>
	<string name="show_dock_in_landscape">Show dock in landscape mode</string>
	<string name="dock_background">Dock</string>
	
	<string name="change_wallpaper">Change wallpaper</string>
	<string name="accessHidden">Access hidden apps</string>
	<string name="quit_hidden_apps">Quit hidden apps</string>
	<string name="fullScan">Full scan</string>
	<string name="clear">Clear</string>
	<string name="wrong_password">Wrong password.</string>
	<string name="type_password">Type password</string>
	
	<string name="add_to_dock">Add to dock</string>
	<string name="remove_from_dock">Remove from dock</string>
	<string name="reset_icon">Reset icon</string>
	<string name="change_icon">Change icon</string>
	<string name="change_icon_title">Change icon of %s</string>
	<string name="change_icon_question">Do you want to change the icon of %s?</string>
	<string name="search_icon_hint">Search icon by package name</string>
	<string name="uninstall">Uninstall</string>
	
	<string name="aboutTitle">About</string>
	<string name="how_to_use">How to use</string>
	<string name="close_tutorial">Close tutorial</string>
	<string name="fullscreen_mode">Fullscreen mode</string>
	
	
<string name="tutorial">Swipe left/right on the apps menu to switch to the next/previous category. Click on the category name to see the categories list.
\n
\nOpen Launcher settings/Category manager to edit categories.
\n
\nClick on the search button to search through all apps (except hidden). To search in the web, open search, type ... and click an arrow at the right of the text field.
\n
\nLong-press an app icon to open the popup menu.
\n
\nPress Home button to open home category. Press once again to open all apps list.
\n
\nPress Back button to switch to the previously opened category.
</string>
	
<string name="about" translatable="false">Emerald Launcher
\n
\nCopyright 2018 Anri Dellal
\n
\nLicensed under GPL-v3
\nWant to help? Report bugs and submit suggestions via GitHub (https://www.github.com/HenriDellal/emerald) or Google Play listing(http://play.google.com/details?id=ru.henridellal.emerald).
\n
\n<b>Thanks to:</b>
\n<b>TheAlaskaLinuxUser</b> (http://thealaskalinuxuser.wordpress.com) for tests and bug fixes.
\n<b>Maxim Kerekesha</b> for Ukrainian translation.
\n<b>Daria Szatan</b> (https://github.com/bla-ke) for Polish translation.
\n<b>Thomas Blankenburg</b> for German translation and tests.
\n<b>David Smit</b> (https://github.com/heycrip) for Dutch translation and continuous help.
\n<b>Monyxie</b> (https://github.com/monyxie) for Simplified Chinese translation.
\n<b>Fijar</b> (https://github.com/f1j4r) for Indonesian translation.
\n<b>Lowlevel</b> (https://steemit.com/@lowlevel) for the launcher icon.
\nAll contributors.
\n
\n<b>TinyLaunch</b>
\nCopyright (c) 2011-12, Alexander R. Pruss
\nLicensed under BSD-3-Clause
\nhttps://github.com/arpruss/tinylaunch
\n
\n<b>CWAC ColorMixer</b>
\nLicensed under the Apache License 2.0.
\nhttps://github.com/commonsguy/cwac-colormixer
\n
\n<b>Hayai Launcher</b>
\nCopyright 2015 Hayai Software
\nLicensed under the Apache License 2.0.
\nhttps://github.com/seizonsenryaku/HayaiLauncher
\n
\n<b>Font-Awesome</b>
\nThe font licensed under the SIL OFL 1.1.
\nhttp://fontawesome.io/</string>

	<!-- DEFAULT VALUES FOR SETTINGS -->
	
	<string name="defaultThemeValue" translatable="false">1</string>
	
</resources>
