<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
	<ru.henridellal.emerald.CategoryManagerPreference
    	android:title="@string/categoryManager"
        android:key="categoryManager"/>
    <ru.henridellal.emerald.AboutPreference
    	android:title="@string/aboutTitle"
        android:key="about"/>
   <!-- <ru.henridellal.emerald.EditIntPreference
    	android:title="test int pref"
        android:key="testIntPref"/>-->
    <PreferenceScreen android:title="@string/appearancePrefs">
	    <ListPreference
	        android:defaultValue="3"
	        android:entries="@array/appShortcutTypes"
	        android:entryValues="@array/appShortcutValues"
	        android:title="@string/appShortcut"
	        android:key="appShortcut"/>
	    <PreferenceScreen android:title="@string/portraitPrefs">
		    <EditTextPreference
		        android:title="@string/iconSize"
		        android:defaultValue="48"
		        android:inputType="number"
		        android:key="iconSize"/>
		    <EditTextPreference
		        android:title="@string/textSize"
		        android:defaultValue="8"
		        android:inputType="number"
		        android:key="textSize"/>
		    <EditTextPreference
		        android:title="@string/columnWidth"
		        android:defaultValue="70"
		        android:inputType="number"
		        android:key="columnWidth"/>
		    <EditTextPreference
		        android:title="@string/verticalSpacing"
		        android:defaultValue="10"
		        android:inputType="number"
		        android:key="verticalSpacing"/>
	    </PreferenceScreen>
	    <PreferenceScreen android:title="@string/landscapePrefs">
		    <EditTextPreference
		        android:title="@string/iconSize"
		        android:defaultValue="48"
		        android:inputType="number"
		        android:key="iconSizeLand"/>
		    <EditTextPreference
		        android:title="@string/textSize"
		        android:defaultValue="8"
		        android:inputType="number"
		        android:key="textSizeLand"/>
		    <EditTextPreference
		        android:title="@string/columnWidth"
		        android:defaultValue="70"
		        android:inputType="number"
		        android:key="columnWidthLand"/>
		    <EditTextPreference
		    	android:title="@string/verticalSpacing"
		        android:defaultValue="10"
		        android:inputType="number"
		        android:key="verticalSpacingLand"/>
	    </PreferenceScreen>
	    <CheckBoxPreference
	    	android:title="@string/tileView"
	    	android:defaultValue="true"
	    	android:key="tile"/>
	    <CheckBoxPreference
	    	android:title="@string/scrollbar"
	    	android:defaultValue="false"
	    	android:key="scrollbar"/>
	    
	    <ListPreference
	        android:defaultValue="1"
	        android:entries="@array/orientationTypes"
	        android:entryValues="@array/orientationValues"
	        android:title="@string/orientation"
	        android:key="orientation"/>
	    <ListPreference
	        android:defaultValue="0"
	        android:entries="@array/fontStyleTypes"
	        android:entryValues="@array/fontStyleValues"
	        android:title="@string/fontStyle"
	        android:key="fontStyle"/>
	    <ListPreference
	        android:defaultValue="@string/defaultThemeValue"
	        android:entries="@array/themeTypes"
	        android:entryValues="@array/themeValues"
	        android:title="@string/theme"
	        android:key="theme"/>
	   <com.commonsware.cwac.colormixer.ColorPreference
    		android:key="barBackground"
    		android:defaultValue="0x22000000"
    		android:title="@string/barBackground"
    	/>
    	<com.commonsware.cwac.colormixer.ColorPreference
    		android:key="appsBackground"
    		android:defaultValue="0x00000000"
    		android:title="@string/appsBackground"
    	/>
	   <ListPreference
	        android:defaultValue="default"
	        android:title="@string/iconPack"
	        android:key="iconPack"/>
	   <CheckBoxPreference
	    	android:title="@string/transformIcons"
	    	android:summary="@string/transformIconsSummary"
	    	android:defaultValue="true"
	    	android:key="transformDrawable"/>
    </PreferenceScreen>
   <EditTextPreference
        android:title="@string/historySize"
        android:defaultValue="10"
        android:inputType="number"
        android:key="historySize"/>
   <!--<EditTextPreference
        android:title="Bar background color"
        android:defaultValue="0"
        android:key="barBackground"/>-->
   <EditTextPreference
        android:title="@string/password"
        android:dialogTitle="@string/passwordHint"
   	 android:summary="@string/passwordSummary"
        android:defaultValue=""
        android:key="password"/>
    <EditTextPreference
        android:title="@string/searchProvider"
        android:defaultValue="https://duckduckgo.com/?q="
        android:key="searchProvider"/>
    <ru.henridellal.emerald.BackupPreference
    	android:title="@string/backupPrefs"
        android:key="backup"/>
    <ru.henridellal.emerald.BackupPreference
    	android:title="@string/restorePrefs"
        android:key="restore"/>
   
   <CheckBoxPreference
		android:title="@string/keepInMemory"
	    android:summary="Only for Android 3.0+"
	    android:defaultValue="false"
		android:key="keepInMemory"/>
   <ru.henridellal.emerald.RestartPreference
    	android:title="@string/restart"
        android:key="restart"/>
</PreferenceScreen>
